--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -66,7 +66,7 @@ jobs:
     - name: Checkout release tools
       uses: actions/checkout@v2
       with:
-        repository: jolie/release-tools
+        repository: jolie/release_tools
         path: release_tools
     
     - name: Compile Jolie installer
