--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -81,7 +81,8 @@ jobs:
         && cd ../release_tools \
         && export JOLIE_VERSION=$(git --git-dir jolie/.git describe --abbrev=0 --tags) \
         && ../jolie-bin/jolie release.ol ../jolie \
-        && mv release/jolie_installer.jar ../jolie-${JOLIE_VERSION:1}.jar
+        && mv release/jolie_installer.jar ../jolie-${JOLIE_VERSION:1}.jar \
+        && cd ..
     
     - name: Release Jolie on GitHub
       uses: softprops/action-gh-release@v1
