--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -86,5 +86,7 @@ jobs:
     
     - name: Release Jolie on GitHub
       uses: softprops/action-gh-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         files: jolie-*.jar
