--- a/javaServices/coreJavaServices/pom.xml
+++ b/javaServices/coreJavaServices/pom.xml
@@ -28,7 +28,7 @@
                 <configuration>
                     <archive>
                         <manifestEntries>
-                            <Class-Path>lib/jolie.jar lib/libjolie.jar lib/mailapi.jar lib/smtp.jar lib/jolie-xml.jar lib/ini4j.jar lib/c3p0-0.9.1.1.jar lib/smack.jar lib/smackx.jar lib/wsdl4j.jar lib/xsom.jar lib/commons-lang3.jar lib/http.jar lib/jolie-js.jar lib/uri-templates.jar lib/quartz-2.2.1.jar lib/quartz-jobs-2.2.1.jar lib/slf4j-api.jar lib/slf4j-simple.jar lib/javax.activation.jar lib/joda-time.jar</Class-Path>
+                            <Class-Path>lib/jolie.jar lib/libjolie.jar lib/mailapi.jar lib/smtp.jar lib/jolie-xml.jar lib/ini4j.jar lib/c3p0-0.9.1.1.jar lib/smack.jar lib/smackx.jar lib/wsdl4j.jar lib/xsom.jar lib/commons-lang3.jar lib/http.jar lib/jolie-js.jar lib/uri-templates.jar lib/quartz-2.2.1.jar lib/quartz-jobs-2.2.1.jar lib/slf4j-api.jar lib/slf4j-simple.jar lib/javax.activation.jar lib/joda-time.jar lib/jolie-uri.jar</Class-Path>
                         </manifestEntries>
                     </archive>
                 </configuration>
@@ -278,6 +278,11 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>jolie-js</artifactId>
+            <version>${jolie.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>jolie-uri</artifactId>
             <version>${jolie.version}</version>
         </dependency>
         <dependency>
