Added levenshtein distance to createHelpMessage, encountered NoClassDefFoundError.

--- a/test/pom.xml
+++ b/test/pom.xml
@@ -237,5 +237,11 @@
 			<artifactId>monitorJavaServices</artifactId>
 			<version>${jolie.version}</version>
 		</dependency>
+
+		<dependency>
+   			<groupId>org.apache.commons</groupId>
+   			<artifactId>commons-text</artifactId>
+   			<version>1.9</version>
+		</dependency>
 	</dependencies>
 </project>
