--- a/libjolie/pom.xml
+++ b/libjolie/pom.xml
@@ -76,5 +76,10 @@
 			<artifactId>automaton</artifactId>
 			<version>1.12-1</version>
 		</dependency>
+		<dependency>
+   			<groupId>org.apache.commons</groupId>
+   			<artifactId>commons-text</artifactId>
+   			<version>1.9</version>
+		</dependency>
 	</dependencies>
 </project>
