--- a/test/pom.xml
+++ b/test/pom.xml
@@ -91,6 +91,11 @@
 			<artifactId>jolie</artifactId>
 			<version>${jolie.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>launchers</artifactId>
+			<version>${jolie.version}</version>
+		</dependency>
 
 		<!-- Libraries -->
 		<dependency>
