--- a/extensions/javascript/pom.xml
+++ b/extensions/javascript/pom.xml
@@ -66,5 +66,15 @@
 			<artifactId>jolie-js</artifactId>
 			<version>${jolie.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.graalvm.js</groupId>
+			<artifactId>js</artifactId>
+			<version>22.1.0</version>
+		</dependency>  
+		<dependency>
+			<groupId>org.graalvm.js</groupId>
+			<artifactId>js-scriptengine</artifactId>
+			<version>22.1.0</version>
+		</dependency>
 	</dependencies>
 </project>
