--- a/extensions/javascript/pom.xml
+++ b/extensions/javascript/pom.xml
@@ -14,6 +14,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
+		<graalvm.version>22.1.0</graalvm.version>
 	</properties>
 	<name>javascript</name>
 	<description>Javascript embedding extension for Jolie.</description>
@@ -51,9 +52,20 @@
 									<type>jar</type>
 									<destFileName>${project.artifactId}.jar</destFileName>
 								</artifactItem>
+								<dependency>
+									<groupId>org.graalvm.js</groupId>
+									<artifactId>js</artifactId>
+									<version>${graalvm.version}</version>
+								</dependency>
+								<artifactItem>
+									<groupId>org.graalvm.js</groupId>
+									<artifactId>js-scriptengine</artifactId>
+									<version>${graalvm.version}</version>
+									<type>jar</type>
+									<destFileName>js-scriptengine.jar</destFileName>
+								</artifactItem>
 							</artifactItems>
 							<outputDirectory>${project.parent.basedir}/${jolie.installation.directory}/extensions</outputDirectory>
-
 						</configuration>
 					</execution>
 				</executions>
@@ -67,14 +79,19 @@
 			<version>${jolie.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>org.graalvm.sdk</groupId>
+			<artifactId>graal-sdk</artifactId>
+			<version>${graalvm.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>org.graalvm.js</groupId>
 			<artifactId>js</artifactId>
-			<version>22.1.0</version>
+			<version>${graalvm.version}</version>
 		</dependency>  
 		<dependency>
 			<groupId>org.graalvm.js</groupId>
 			<artifactId>js-scriptengine</artifactId>
-			<version>22.1.0</version>
+			<version>${graalvm.version}</version>
 		</dependency>
 	</dependencies>
 </project>
