Automatically move all dependencies to lib

--- a/extensions/soap/pom.xml
+++ b/extensions/soap/pom.xml
@@ -38,7 +38,7 @@
                 <artifactId>maven-dependency-plugin</artifactId>
                 <version>3.1.1</version>
                 <executions>
-                    <execution>
+                    <!-- <execution>
                         <id>copy-dependencies</id>
                         <phase>package</phase>
                         <goals>
@@ -62,7 +62,7 @@
                                 build-tools
                             </excludeArtifactIds>
                         </configuration>
-                    </execution>
+                    </execution> -->
                     <execution>
                         <id>copy-installed</id>
                         <phase>install</phase>
