--- a/javaServices/coreJavaServices/pom.xml
+++ b/javaServices/coreJavaServices/pom.xml
@@ -38,7 +38,7 @@
                 <artifactId>maven-dependency-plugin</artifactId>
                 <version>3.1.1</version>
                 <executions>
-                   
+<!--                    
                     <execution>
                         <id>copy</id>
                         <phase>install</phase>
@@ -226,14 +226,11 @@
                                     <destFileName>txw2.jar</destFileName>
                                 </artifactItem>
                             </artifactItems>   
-                            <!--artifactItems>
-        
-                            </artifactItems-->
                             <outputDirectory>${project.parent.basedir}/${jolie.installation.directory}/lib</outputDirectory>
 
                         </configuration>
 
-                    </execution>
+                    </execution> -->
                     <execution>
                         <id>copy-installed</id>
                         <phase>install</phase>
