--- a/lib/jolie-js/pom.xml
+++ b/lib/jolie-js/pom.xml
@@ -28,7 +28,7 @@
 				<version>3.1.1</version>
 
 				<executions>
-					<execution>
+					<!-- <execution>
 						<id>copy</id>
 						<phase>install</phase>
 						<goals>
@@ -46,7 +46,7 @@
 							</artifactItems>
 							<outputDirectory>${jolie.installation.directory}/lib</outputDirectory>
 						</configuration>
-					</execution>
+					</execution> -->
 					<execution>
 						<id>copy-installed</id>
 						<phase>install</phase>
