--- a/extensions/soap/pom.xml
+++ b/extensions/soap/pom.xml
@@ -109,15 +109,25 @@
             <artifactId>http</artifactId>
             <version>${jolie.version}</version>
         </dependency>
-        <dependency>
+        <!-- <dependency>
             <groupId>javax.xml.soap</groupId>
             <artifactId>javax.xml.soap-api</artifactId>
             <version>1.4.0</version>
-        </dependency>
-        <dependency>
+        </dependency> -->
+        <!-- <dependency>
             <groupId>com.sun.xml.messaging.saaj</groupId>
             <artifactId>saaj-impl</artifactId>
             <version>1.5.2</version>
+        </dependency> -->
+        <dependency>
+            <groupId>org.glassfish.metro</groupId>
+            <artifactId>webservices-rt</artifactId>
+            <version>2.4.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish.metro</groupId>
+            <artifactId>webservices-api</artifactId>
+            <version>2.4.4</version>
         </dependency>
     </dependencies>
 </project>
