--- a/extensions/soap/pom.xml
+++ b/extensions/soap/pom.xml
@@ -122,12 +122,12 @@
         <dependency>
             <groupId>org.glassfish.metro</groupId>
             <artifactId>webservices-rt</artifactId>
-            <version>2.4.4</version>
+            <version>4.0.0-M4</version>
         </dependency>
         <dependency>
             <groupId>org.glassfish.metro</groupId>
             <artifactId>webservices-api</artifactId>
-            <version>2.4.4</version>
+            <version>4.0.0-M4</version>
         </dependency>
     </dependencies>
 </project>
