--- a/test/pom.xml
+++ b/test/pom.xml
@@ -74,6 +74,8 @@
 						<argument>--charset</argument>
 						<argument>UTF-8</argument>
 						<argument>test.ol</argument>
+						<!-- Edit the next line with your desired target if you want a specific test -->
+						<!-- <argument>.*soap.*</argument> -->
 					</arguments>
 				</configuration>
 			</plugin>
@@ -85,16 +87,19 @@
 			<groupId>${project.groupId}</groupId>
 			<artifactId>libjolie</artifactId>
 			<version>${jolie.version}</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>jolie</artifactId>
 			<version>${jolie.version}</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>launchers</artifactId>
 			<version>${jolie.version}</version>
+			<scope>test</scope>
 		</dependency>
 
 		<!-- Libraries -->
@@ -102,21 +107,25 @@
 			<groupId>${project.groupId}</groupId>
 			<artifactId>jolie-js</artifactId>
 			<version>${jolie.version}</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>jolie-ssl</artifactId>
 			<version>${jolie.version}</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>jolie-xml</artifactId>
 			<version>${jolie.version}</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>xsom</artifactId>
 			<version>${jolie.version}</version>
+			<scope>test</scope>
 		</dependency>
 
 		<!-- Extensions -->
@@ -124,71 +133,85 @@
 			<groupId>${project.groupId}</groupId>
 			<artifactId>auto</artifactId>
 			<version>${jolie.version}</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>btl2cap</artifactId>
 			<version>${jolie.version}</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>http</artifactId>
 			<version>${jolie.version}</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>https</artifactId>
 			<version>${jolie.version}</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>javascript</artifactId>
 			<version>${jolie.version}</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>jsonrpc</artifactId>
 			<version>${jolie.version}</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>local</artifactId>
 			<version>${jolie.version}</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>localsocket</artifactId>
 			<version>${jolie.version}</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>rmi</artifactId>
 			<version>${jolie.version}</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>soap</artifactId>
 			<version>${jolie.version}</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>soaps</artifactId>
 			<version>${jolie.version}</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>sodep</artifactId>
 			<version>${jolie.version}</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>sodeps</artifactId>
 			<version>${jolie.version}</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>xmlrpc</artifactId>
 			<version>${jolie.version}</version>
+			<scope>test</scope>
 		</dependency>
 
 		<!-- Support -->
@@ -196,11 +219,13 @@
 			<groupId>${project.groupId}</groupId>
 			<artifactId>jolie-java</artifactId>
 			<version>${jolie.version}</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>metaservice-java</artifactId>
 			<version>${jolie.version}</version>
+			<scope>test</scope>
 		</dependency>
 		
 		<!-- Tools -->
@@ -209,26 +234,31 @@
 			<groupId>${project.groupId}</groupId>
 			<artifactId>jolie2java</artifactId>
 			<version>${jolie.version}</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>jolie2plasma</artifactId>
 			<version>${jolie.version}</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>jolie2surface</artifactId>
 			<version>${jolie.version}</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>jolie2wsdl</artifactId>
 			<version>${jolie.version}</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>joliec</artifactId>
 			<version>${jolie.version}</version>
+			<scope>test</scope>
 		</dependency>
 
 		<!-- Java services -->
@@ -236,11 +266,13 @@
 			<groupId>${project.groupId}</groupId>
 			<artifactId>coreJavaServices</artifactId>
 			<version>${jolie.version}</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>monitorJavaServices</artifactId>
 			<version>${jolie.version}</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 </project>
