--- a/javaServices/coreJavaServices/pom.xml
+++ b/javaServices/coreJavaServices/pom.xml
@@ -79,7 +79,7 @@
                                     <artifactId>json-simple</artifactId>
                                     <version>1.1.1</version>
                                     <type>jar</type>
-                                    <destFileName>json_simple.jar</destFileName>
+                                    <destFileName>json-simple.jar</destFileName>
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>${project.groupId}</groupId>
