--- a/lib/jolie-uri/pom.xml
+++ b/lib/jolie-uri/pom.xml
@@ -41,7 +41,7 @@
 									<artifactId>json-simple</artifactId>
 									<version>1.1.1</version>
 									<type>jar</type>
-									<destFileName>json_simple.jar</destFileName>
+									<destFileName>json-simple.jar</destFileName>
 								</artifactItem>
 							</artifactItems>
 							<outputDirectory>${jolie.installation.directory}/lib</outputDirectory>
