--- a/javaServices/coreJavaServices/pom.xml
+++ b/javaServices/coreJavaServices/pom.xml
@@ -392,11 +392,11 @@
             <artifactId>jaxb-impl</artifactId>
             <version>2.4.0-b180830.0438</version>
         </dependency>
-        <dependency>
+        <!-- <dependency>
             <groupId>javax.xml</groupId>
             <artifactId>jaxp-api</artifactId>
             <version>1.4.2</version>
-        </dependency>
+        </dependency> -->
         <dependency>
             <groupId>com.sun.xml.fastinfoset</groupId>
             <artifactId>FastInfoset</artifactId>
