Add PMD checks to devcontainer

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -22,7 +22,8 @@
 				"ms-azuretools.vscode-docker",
 				"christian-kohler.path-intellisense",
 				"redhat.vscode-yaml",
-				"ms-kubernetes-tools.vscode-kubernetes-tools"
+				"ms-kubernetes-tools.vscode-kubernetes-tools",
+				"cracrayol.java-pmd"
 			]
 		}
 	}
