Make sure Jolie can be packaged before publishing to Maven central

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,21 +37,14 @@ jobs:
         path: jolie-git
 
     - name: Set up JDK
-      uses: actions/setup-java@v2
+      uses: actions/setup-java@v3
       with:
         java-version: 11
-        distribution: 'adopt'
+        distribution: 'temurin'
+        cache: 'maven'
         server-id: ossrh
         server-username: MAVEN_USERNAME
         server-password: MAVEN_PASSWORD
-
-    - name: Cache local Maven repository
-      uses: actions/cache@v2
-      with:
-        path: ~/.m2/repository
-        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-        restore-keys: |
-          ${{ runner.os }}-maven-
 
     - name: Install gpg secret key
       run: |
@@ -61,19 +54,7 @@ jobs:
     - name: Build prerequisites
       run: mvn -f jolie-git/pom.xml -DskipTests install -pl build-tools
 
-    - name: Publish to Maven Central
-      env:
-        MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
-        MAVEN_PASSWORD: ${{ secrets.OSSRH_TOKEN }}
-      run: |
-        mvn -f jolie-git/pom.xml \
-        --no-transfer-progress --batch-mode \
-        -Dgpg.passphrase=${{ secrets.OSSRH_GPG_SECRET_KEY_PASSWORD }} \
-        clean deploy \
-        -pl libjolie,jolie,lib/jolie-js,jolie-cli \
-        -P ossrh
-    
-    - name: Compile the rest
+    - name: Compile Jolie
       run: mvn -f jolie-git/pom.xml -DskipTests install -Dmaven.test.skip
 
     - name: Compile Jolie installer
@@ -101,3 +82,15 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
       with:
         files: jolie-*.jar
+    
+    - name: Publish on Maven Central
+      env:
+        MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
+        MAVEN_PASSWORD: ${{ secrets.OSSRH_TOKEN }}
+      run: |
+        mvn -f jolie-git/pom.xml \
+        --no-transfer-progress --batch-mode \
+        -Dgpg.passphrase=${{ secrets.OSSRH_GPG_SECRET_KEY_PASSWORD }} \
+        deploy \
+        -pl libjolie,jolie,lib/jolie-js,jolie-cli \
+        -P ossrh
