--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -29,32 +29,49 @@ jobs:
   dockerhub:
     runs-on: ubuntu-latest
     steps:
-      -
-        name: Checkout
+      - name: Checkout
         uses: actions/checkout@v2
-      -
-        name: Docker meta
-        id: meta
+
+      - name: Docker meta (runtime images)
+        id: meta_rt
         uses: docker/metadata-action@v4
         with:
           images: jolielang/jolie
           tags: |
             type=edge
             type=semver,pattern={{version}}
-      -
-        name: Set up QEMU
+      
+      - name: Docker meta (runtime Alpine images)
+        id: meta_alpine
+        uses: docker/metadata-action@v4
+        with:
+          images: jolielang/jolie
+          tags: |
+            type=edge,suffix=-alpine
+            type=semver,pattern={{version}},suffix=-alpine
+      
+      - name: Docker meta (development images)
+        id: meta_dev
+        uses: docker/metadata-action@v4
+        with:
+          images: jolielang/jolie
+          tags: |
+            type=edge,suffix=-dev
+            type=semver,pattern={{version}},suffix=-dev
+
+      - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
-      -
-        name: Set up Docker Buildx
+
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
-      -
-        name: Login to DockerHub
+
+      - name: Login to DockerHub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
-        name: Build and push
+
+      - name: Build and push (runtime images)
         uses: docker/build-push-action@v3
         with:
           context: .
@@ -62,5 +79,27 @@ jobs:
           #platforms: linux/amd64,linux/arm64
           platforms: linux/amd64
           push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          tags: ${{ steps.meta_rt.outputs.tags }}
+          labels: ${{ steps.meta_rt.outputs.labels }}
+        
+      - name: Build and push (runtime Alpine images)
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          file: docker/Dockerfile.alpine
+          #platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: ${{ steps.meta_alpine.outputs.tags }}
+          labels: ${{ steps.meta_alpine.outputs.labels }}
+      
+      - name: Build and push (dev images)
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          file: docker/Dockerfile.dev
+          #platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: ${{ steps.meta_dev.outputs.tags }}
+          labels: ${{ steps.meta_dev.outputs.labels }}
