--- a/docker/Dockerfile.dev
+++ b/docker/Dockerfile.dev
@@ -16,7 +16,7 @@
 # MA 02110-1301 USA
 
 # To use this dockerfile locally, launch the following command from the root directory of your local copy of this repository.
-# docker build -f docker/Dockerfile -t jolielang/jolie .
+# docker build -f docker/Dockerfile.dev -t jolielang/jolie .
 
 FROM maven:3-eclipse-temurin-11 as JolieBuild
 
@@ -38,7 +38,7 @@ WORKDIR /jolie-git/release-tools
 RUN jolie release.ol ..
 
 # Start from scratch, copy the installer, install, remove the installer.
-FROM eclipse-temurin:17-jre
+FROM eclipse-temurin:latest
 WORKDIR /
 COPY --from=JolieBuild /jolie-git/release-tools/release/jolie-installer.jar .
 RUN apt-get update && apt-get install -y unzip \
